--- a/portfolio.css
+++ b/portfolio.css
@@ -137,11 +137,9 @@ h2 {
   text-align: center;
   margin-bottom: 20px;
 }
-/*
-.project {
-  background-color: rgb(125, 125, 125);
-  border: 4px solid rgb(125, 125, 125);
-  border-bottom: none;
+
+/*.project {
+  margin-right: -50px;
 }*/
 
 .contact-me {
@@ -213,6 +211,12 @@ footer {
     padding-left: 165px;
   }
 
+  .about {
+    border-right: 4px solid rgba(255, 255, 255, 0.9);
+    margin-right: 45px;
+    height: 500px;
+  }
+
   .circle {
     width: 600px;
     height: 600px;
@@ -235,5 +239,344 @@ footer {
     position: relative;
     top: -10px;
     left: 560px;
+  }
+
+  .project {
+    margin-right: -50px;
+  }
+
+  .contact-me {
+    padding-left: 25px;
+  }
+  .contact-heading {
+    justify-content: space-evenly;
+    width: 300px;
+  }
+
+  h3 {
+    font-size: 3rem;
+  }
+
+  .fa-angle-right {
+    color: rgba(255, 255, 255, 0.08);
+    font-size: 160px;
+  }
+
+  .links-div {
+    width: 300px;
+  }
+
+  .social-links {
+    font-size: 40px;
+  }
+
+  body {
+    width: 100%;
+  }
+  .projects-grid {
+    display: flex;
+    flex-direction: column;
+    padding-right: 50px;
+  }
+}
+
+@media (max-width: 820px) and (min-width: 640px) {
+  header {
+    font-size: 1rem;
+    padding-left: 105px;
+  }
+
+  .about {
+    border-right: 4px solid rgba(255, 255, 255, 0.9);
+    margin-right: 45px;
+    height: 360px;
+  }
+
+  .circle {
+    width: 460px;
+    height: 460px;
+    margin-right: 30px;
+  }
+
+  .content {
+    padding-left: 100px;
+    position: relative;
+    top: 5%;
+    font-size: 0.8rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  .potrait {
+    width: 140px;
+    height: auto;
+    position: relative;
+    top: -16px;
+    left: 420px;
+  }
+
+  .project {
+    margin-right: -50px;
+  }
+
+  .contact-me {
+    justify-content: space-between;
+  }
+
+  .contact-heading {
+    padding-left: 20px;
+    padding-top: 50px;
+    align-self: center;
+    width: 200px;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+  .fa-angle-right {
+    color: rgba(255, 255, 255, 0.08);
+    font-size: 100px;
+  }
+
+  .links-div {
+    width: 200px;
+    padding: 10px 20px 10px 20px;
+    margin-top: 50px;
+    grid-gap: 15px;
+  }
+
+  .social-links {
+    font-size: 25px;
+  }
+
+  body {
+    width: 100%;
+  }
+  .projects-grid {
+    display: flex;
+    flex-direction: column;
+    padding-right: 50px;
+  }
+}
+
+@media (max-width: 640px) {
+  header {
+    font-size: 0.8rem;
+    padding-left: 25px;
+  }
+
+  .about {
+    border-right: 4px solid rgba(255, 255, 255, 0.9);
+    margin-right: 45px;
+    height: 300px;
+  }
+
+  .circle {
+    margin-left: -10px;
+    position: absolute;
+    top: -80px;
+    width: 400px;
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.08);
+    border-radius: 50%;
+    z-index: -1;
+  }
+
+  .content {
+    padding-left: 40px;
+    position: relative;
+    top: 5%;
+    font-size: 0.7rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  .potrait {
+    width: 120px;
+    top: -10px;
+    height: auto;
+    position: relative;
+    left: 300px;
+  }
+
+  .project {
+    margin-right: -50px;
+  }
+
+  .contact-me {
+    justify-content: space-between;
+  }
+
+  .contact-heading {
+    padding-left: 20px;
+    padding-top: 50px;
+    align-self: center;
+    width: 200px;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+  .fa-angle-right {
+    color: rgba(255, 255, 255, 0.08);
+    font-size: 100px;
+  }
+
+  .links-div {
+    width: 200px;
+    padding: 10px 20px 10px 20px;
+    margin-top: 50px;
+    grid-gap: 15px;
+  }
+
+  .social-links {
+    font-size: 25px;
+  }
+
+  body {
+    width: 100%;
+  }
+  .projects-grid {
+    display: flex;
+    flex-direction: column;
+    padding-right: 50px;
+  }
+}
+
+@media (max-width: 530px) {
+  header {
+    font-size: 0.8rem;
+    padding-left: 40px;
+  }
+
+  .logo {
+    margin-right: 0px;
+  }
+  .circle {
+    top: -50px;
+    margin-left: -20px;
+    width: 350px;
+    height: 350px;
+  }
+
+  .nav-links {
+    padding: 25px 10px;
+  }
+
+  .about {
+    margin-right: 30px;
+    height: 270px;
+  }
+
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  .content {
+    left: -15px;
+  }
+
+  .potrait {
+    width: 100px;
+    top: 10px;
+    height: auto;
+    position: relative;
+    left: 260px;
+  }
+
+  .contact-me {
+    margin-right: 10px;
+    margin-left: 30px;
+  }
+
+  .contact-heading {
+    width: 180px;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  .links-div {
+    padding: 20px 10px 20px 10px;
+  }
+}
+
+@media (max-width: 430px) {
+  header {
+    font-size: 0.8rem;
+    padding-left: 10px;
+  }
+
+  .circle {
+    top: -20px;
+    margin-left: -50px;
+    width: 320px;
+    height: 320px;
+  }
+
+  .about {
+    height: 260px;
+  }
+  .nav-links {
+    padding: 25px 5px;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .content {
+    left: -30px;
+  }
+
+  .potrait {
+    width: 80px;
+    top: 10px;
+    height: auto;
+    position: relative;
+    left: 215px;
+  }
+
+  .contact-me {
+    margin-right: 10px;
+  }
+
+  .contact-heading {
+    width: 150px;
+    padding-left: 15px;
+  }
+
+  h3 {
+    font-size: 1.3rem;
+  }
+
+  .fa-angle-right {
+    font-size: 5rem;
+  }
+
+  .links-div {
+    width: 120px;
+    margin-top: 50px;
+    grid-gap: 5px;
+    padding: 20px 5px 20px 5px;
+  }
+
+  .social-links {
+    font-size: 20px;
   }
 }
